# RHS-BareMetalCore

./: CHANGELOG.md  CMakeLists.txt  README.md  applications.h  launch.json.in  rhs.c  rhs.cmake  rhs.h
.github/workflows/: core_ci.yml
applications/: CMakeLists.txt
applications/services/: CMakeLists.txt  README.md
applications/services/LWIP/: CMakeLists.txt
applications/services/LWIP/App/: lwip.c  lwip.h
applications/services/LWIP/lan8742/: lan8742.c  lan8742.h
applications/services/can_open/: CMakeLists.txt  can_open.h  can_open_cli.c  can_open_ctrl_dev.c  can_open_srv.c  can_open_srv.h  can_open_srv_i.c  od_common_defs.c  od_common_defs.h
applications/services/cli/: CMakeLists.txt  cli.h  cli_app.c  cli_app.h
applications/services/eth_net/: ARCHITECTURE.md  CMakeLists.txt  LISTENERS_BUFFER_README.md  README.md  eth_net.h  eth_net_listeners.c  eth_net_listeners.h  eth_net_srv.c  eth_net_srv.h  eth_net_utils.c  hal.h
applications/services/eth_net/modbus_tcp/: modbus_tcp.c  modbus_tcp.h
applications/services/eth_net/stm32f_eth_driver/: CMakeLists.txt  stm32f_eth_driver.c  stm32f_eth_driver.h
applications/services/loader/: CMakeLists.txt  loader.c  loader.h  loader_i.h
applications/services/net/: CMakeLists.txt  README.md  net.c  net.h  net_i.h
applications/services/net/eth_net/: CMakeLists.txt  README.md  eth_net.c  eth_net.h  eth_net_srv.c  eth_net_srv.h
applications/services/net/modbus_tcp/: CMakeLists.txt  modbus_tcp.c  modbus_tcp.h
applications/services/net/net_listeners/: CMakeLists.txt  net_listeners.c  net_listeners.h
applications/services/net/net_utils/: CMakeLists.txt  net_utils.c  net_utils.h
applications/services/net/usb_cdc_net/: CMakeLists.txt  README.md  tusb_config.h.example  usb_cdc_net.c  usb_cdc_net.h
applications/services/net/usb_eth_bridge/: CMakeLists.txt  README.md  usb_eth_bridge.c  usb_eth_bridge.h
applications/services/notification/: CMakeLists.txt  notification.h  notification_app.c  notification_app.h  notification_app_api.c  notification_messages.c  notification_messages.h  notification_messages_notes.c
applications/services/rndis/: CMakeLists.txt  rndis.c  rndis.h  rndis_i.h  usb_descriptors_cdc_net.c  usb_descriptors_cdc_net.h
applications/services/usb_cdc_net/: CMakeLists.txt  rhs_hal_usb_cdc_net.c  usb_cdc_net.c  usb_cdc_net.h
applications/services/usb_dual_cdc/: CMakeLists.txt  usb_descriptors_cdc.c  usb_descriptors_cdc.h  usb_dual_cdc.c  usb_dual_cdc.h
applications/services/usb_net/: rhs_hal_usb_cdc_net.c
applications/services/usb_serial_bridge/: CMakeLists.txt  usb_serial_bridge.c  usb_serial_bridge.h
applications/services/usb_uart_bridge/: CMakeLists.txt  usb_uart_bridge.c
applications/tests/: CMakeLists.txt  README.md  flash_ex_unit_test.c  log_save_test.c  memmng_unit_test.c
applications/tests/rhs_tests/: CMakeLists.txt  flash_ex_unit_test.c  memmng_unit_test.c
applications/tests/rhs_tests/records_test/: CMakeLists.txt  records_test.c
cmake/: git_sha.cmake  rhs.cmake  rhs_version.h.in
core/: README.md  api_lock.h  base.h  check.c  check.h  common.h  critical.c  defines.h  event_flag.c  event_flag.h  kernel.c  kernel.h  log.c  log.h  m_cstr_dup.h  memmgr.c  memmgr.h  message_queue.c  message_queue.h  mutex.c  mutex.h  record.c  record.h  semaphore.c  semaphore.h  stream_buf.c  stream_buf.h  thread.c  thread.h  thread_list.c  thread_list.h  timer.c  timer.h
device_templates/: plc_l.cmake  plc_m.cmake  plc_xl.cmake
drivers/: CMakeLists.txt
drivers/eeprom/: CMakeLists.txt  eeprom.c  eeprom.h
hal/: CMakeLists.txt  README.md  rhs_hal.c  rhs_hal.h
hal/rhs_hal_can/: CMakeLists.txt  rhs_hal_can.c  rhs_hal_can.h
hal/rhs_hal_cortex/: CMakeLists.txt  rhs_hal_cortex.c  rhs_hal_cortex.h
hal/rhs_hal_eth/: CMakeLists.txt  rhs_hal_eth.c  rhs_hal_eth.h
hal/rhs_hal_flash_ex/: CMakeLists.txt  rhs_hal_flash_ex.c  rhs_hal_flash_ex.h  usage_example.md
hal/rhs_hal_flash_ex/mt25ql128aba/: CMakeLists.txt  mt25ql128aba.c  mt25ql128aba.h
hal/rhs_hal_gpio/: CMakeLists.txt  rhs_hal_gpio.h
hal/rhs_hal_i2c/: CMakeLists.txt  rhs_hal_i2c.c  rhs_hal_i2c.h  rhs_hal_i2c_config.c  rhs_hal_i2c_type.h
hal/rhs_hal_interrupt/: CMakeLists.txt  rhs_hal_interrupt.c  rhs_hal_interrupt.h
hal/rhs_hal_io/: CMakeLists.txt  rhs_hal_io.c  rhs_hal_io.h
hal/rhs_hal_network/: CMakeLists.txt  rhs_hal_network.c  rhs_hal_network.h
hal/rhs_hal_power/: CMakeLists.txt  rhs_hal_power.c  rhs_hal_power.h
hal/rhs_hal_random/: CMakeLists.txt  rhs_hal_random.c  rhs_hal_random.h
hal/rhs_hal_rtc/: CMakeLists.txt  rhs_hal_rtc.c  rhs_hal_rtc.h
hal/rhs_hal_rtc/unixtime/: CMakeLists.txt  unixtime.c  unixtime.h
hal/rhs_hal_serial/: CMakeLists.txt  rhs_hal_serial.c  rhs_hal_serial.h  rhs_hal_serial_types.h
hal/rhs_hal_serial/internal/: hal_rs232.c  hal_rs232.h  hal_rs422.c  hal_rs422.h  hal_rs485.c  hal_rs485.h  hard_defs.h  rhs_hal_serial_types.h  rhs_hal_serial_types_i.h
hal/rhs_hal_speaker/: CMakeLists.txt  rhs_hal_speaker.c  rhs_hal_speaker.h
hal/rhs_hal_usb/: CMakeLists.txt  hal.h  rhs_hal_usb.c  rhs_hal_usb.h  rhs_hal_usb_cdc.c  rhs_hal_usb_cdc.h  rhs_hal_usb_cdc_net.c  rhs_hal_usb_u2f.c  tud_net_dispatch.c  tud_net_dispatch.h  usb_descriptors.c
hal/rhs_hal_version/: CMakeLists.txt  rhs_hal_version.c  rhs_hal_version.h
scripts/: units.py
