add_subdirectory(cli)
add_subdirectory(loader)

message("\tSERVICES:")
if(RHS_SERVICE_NOTIFICATION)
    message("\t\tRHS_SERVICE_NOTIFICATION\t\t- ON")
    add_subdirectory(notification)
else()
    message("\t\tRHS_SERVICE_NOTIFICATION\t\t- OFF")
endif()
if(RHS_SERVICE_LWIP)
    message("\t\tRHS_SERVICE_LWIP\t\t\t\t- ON")
    add_subdirectory(LWIP)
else()
    message("\t\tRHS_SERVICE_LWIP\t\t\t\t- OFF")
endif()
if(RHS_SERVICE_CAN_OPEN)
    message("\t\tRHS_SERVICE_CAN_OPEN\t\t\t- ON")
    add_subdirectory(can_open)
else()
    message("\t\tRHS_SERVICE_CAN_OPEN\t\t\t- OFF")
endif()
if(RHS_SERVICE_USB_DUAL_CDC)
    message("\t\tRHS_SERVICE_USB_DUAL_CDC\t- ON")
    add_subdirectory(usb_dual_cdc)
    add_subdirectory(usb_serial_bridge)
else()
    message("\t\tRHS_SERVICE_USB_DUAL_CDC\t- OFF")
endif()
if(RHS_SERVICE_RNDIS)
    message("\t\tRHS_SERVICE_RNDIS\t\t\t- ON")
    add_subdirectory(rndis)
else()
    message("\t\tRHS_SERVICE_RNDIS\t\t\t- OFF")
endif()
