add_subdirectory(cli)
add_subdirectory(loader)

message("\tSERVICES:")
if(RHS_SERVICE_NOTIFICATION)
    message("\t\tRHS_SERVICE_NOTIFICATION\t\t- ON")
    add_subdirectory(notification)
else()
    message("\t\tRHS_SERVICE_NOTIFICATION\t\t- OFF")
endif()
if(RHS_SERVICE_CAN_OPEN)
    message("\t\tRHS_SERVICE_CAN_OPEN\t\t\t- ON")
    add_subdirectory(can_open)
else()
    message("\t\tRHS_SERVICE_CAN_OPEN\t\t\t- OFF")
endif()
if(RHS_SERVICE_USB_SERIAL_BRIDGE)
    message("\t\tRHS_SERVICE_USB_SERIAL_BRIDGE\t- ON")
    add_subdirectory(usb_serial_bridge)
else()
    message("\t\tRHS_SERVICE_USB_SERIAL_BRIDGE\t- OFF")
endif()
if(RHS_APPLICATION_USB_CDC_NET)
    message("\t\tRHS_APPLICATION_USB_CDC_NET\t\t- ON")
    add_subdirectory(usb_cdc_net)
else()
    message("\t\tRHS_APPLICATION_USB_CDC_NET\t\t- OFF")
endif()
if(RHS_SERVICE_ETH_NET)
    message("\t\tRHS_SERVICE_ETH_NET\t\t\t\t- ON")
    add_subdirectory(eth_net)
    message("\t\t\tIP: ${RHS_ETH_NET_IP}")
    message("\t\t\tGateway: ${RHS_ETH_NET_GATEWAY}")
    message("\t\t\tNetmask: ${RHS_ETH_NET_NETMASK}")
else()
    message("\t\tRHS_SERVICE_ETH_NET\t\t\t\t- OFF")
endif()
